force-app/main/default/objects/TVE_Integration_Constants__c/TVE_Integration_Constants__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TVE Integration Constants</label>
</CustomObject>