force-app/main/default/objects/TVE_Integration_Constants__c/fields/Assembly__c.field-meta.xml
<CustomField>
    <fullName>Assembly__c</fullName>
    <label>Assembly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>