force-app/main/default/objects/TVE_Integration_Constants__c/fields/Integration_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Method_Name__c</fullName>
    <label>Integration Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>