force-app/main/default/objects/TVE_Integration_Constants__c/fields/MessageID__c.field-meta.xml
<CustomField>
    <fullName>MessageID__c</fullName>
    <label>MessageID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>