force-app/main/default/objects/TVE_Integration_Constants__c/fields/Partner_Role_1__c.field-meta.xml
<CustomField>
    <fullName>Partner_Role_1__c</fullName>
    <label>Partner Role 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>